--- a/api/package.json
+++ b/api/package.json
@@ -8,14 +8,20 @@
   },
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
     "cors": "2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.37",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "2.8.10",
+    "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^14.14.37",
     "nodemon": "2.0.7",
     "ts-node-dev": "1.1.6",
     "typescript": "4.2.3"
